code/human_written_tests/WebAssembly/processed_control_flow_validation/test_if_88.wast
(assert_invalid
  (module
    (func $type-condition-empty-in-call
      (call 1 (if(then))) (drop)
    )
    (func (param i32) (result i32) (local.get 0))
  )
  "type mismatch"
)